<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <data>
        <variable
            name="item"
            type="com.jobplanet.test.model.CompanyData" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_cmp_base_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:gravity="center_vertical"
            app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    app:setImageUrl="@{item.logo_path}" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:text="@{item.name}"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingVertical="4dp"
                            android:paddingHorizontal="8dp"
                            android:layout_marginRight="8dp"
                            android:textSize="16sp"
                            android:background="@drawable/bg_maskable_avg"
                            android:text="@{'★' + Float.toString(item.rate_total_avg)}"
                            android:textColor="@color/color_yellow"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textColor="@color/color_gray"
                            android:text="@{item.industry_name}"/>
                    </LinearLayout>

                </LinearLayout>

        </LinearLayout>

        <View
            android:id="@+id/top_divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/color_light_gray"
            app:layout_constraintTop_toBottomOf="@id/layout_cmp_base_info"/>

        <TextView
            android:id="@+id/tv_review_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:textColor="@color/base_black"
            android:text="@{item.review_summary}"
            app:layout_constraintTop_toBottomOf="@id/top_divider"/>

        <LinearLayout
            android:id="@+id/layout_salary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="8dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/tv_review_summary">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:textSize="18sp"
                android:textColor="@color/color_green"
                android:text="@string/salary_avg_label"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                app:decimalText="@{item.salary_avg}"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/base_black"
                android:text="@string/salary_avg_unit"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_interview_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="8dp"
            android:textSize="18sp"
            android:textColor="@color/base_black"
            android:text="@string/interview_label"
            app:layout_constraintTop_toBottomOf="@id/layout_salary"/>

        <TextView
            android:id="@+id/tv_interview_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_interview_label"
            android:textSize="16sp"
            android:textColor="@color/color_gray"
            android:text="@{item.interview_question}"/>

        <View
            android:id="@+id/bottom_divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_interview_question"
            android:background="@color/color_light_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_gravity="right"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="8dp"
            android:paddingBottom="8dp"
            android:text="@string/more_company_info"
            android:textColor="@color/color_gray_blue"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/bottom_divider"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
