<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="item"
            type="com.jobplanet.test.model.SalaryData" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_cmp_base_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:gravity="center_vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/top_divider">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="16dp"
                app:setImageUrl="@{item.logo_path}" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@{item.name}"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingVertical="4dp"
                    android:paddingHorizontal="8dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingVertical="4dp"
                        android:paddingHorizontal="8dp"
                        android:layout_marginRight="8dp"
                        android:textSize="16sp"
                        android:background="@drawable/bg_maskable_avg"
                        android:text="@{'★' + Float.toString(item.rate_total_avg)}"
                        android:textColor="@color/color_yellow"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/color_gray"
                        android:text="@{item.industry_name}"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <View
            android:id="@+id/top_divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            app:layout_constraintTop_toBottomOf="@id/layout_cmp_base_info"
            android:background="#f0f0f0"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="32dp"

            app:layout_constraintTop_toBottomOf="@id/top_divider">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/color_green"
                        android:textSize="20sp"
                        android:text="@string/salary_avg_label"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/base_black"
                            android:textSize="22sp"
                            android:textStyle="bold"
                            app:decimalText="@{item.salary_avg}"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/base_black"
                            android:textSize="18sp"
                            android:text="만원"/>
                    </LinearLayout>



                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:paddingHorizontal="16dp"
                    >

                    <TextView
                        android:id="@+id/tv_salary_lowest_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textColor="@color/color_dark_gray"
                        android:text="@string/salary_lowest"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:textSize="18sp"
                        android:textColor="@color/color_dark_gray"
                        android:text="@string/salary_highest"/>

                    <ProgressBar
                        android:id="@+id/progressBar"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_salary_lowest_label"/>

                    <TextView
                        android:id="@+id/tv_salary_lowest"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/progressBar"
                        android:textSize="18sp"
                        android:textColor="@color/base_black"
                        android:textStyle="bold"
                        app:decimalText="@{item.salary_lowest}"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/progressBar"
                        android:layout_alignParentRight="true"
                        android:textSize="18sp"
                        android:textColor="@color/base_black"
                        android:textStyle="bold"
                        app:decimalText="@{item.salary_highest}"/>

                </RelativeLayout>
                
            </LinearLayout>


            <View
                android:id="@+id/bottom_divider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#f0f0f0"
                app:layout_constraintTop_toBottomOf="@id/layout_cmp_base_info"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/more_salary_info"
                android:textColor="@color/color_gray_blue"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_gravity="right"/>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
